Agregamos titulos a las secciones y el logo en el footer

--- a/index.html
+++ b/index.html
@@ -19,13 +19,32 @@
         </div>
     </header>
     <main class="main">
-        <div class="container">
-            Contenido Principal
-        </div>
+        <section class="questions">
+            <div class="container">
+                <h1>You've Got Questions. We've Got Taste.</h1>
+            </div>
+        </section>
+        <section class="offers">
+            <div class="container">
+                <h1>Today <span>special</span> offers</h1>
+            </div>
+        </section>
+        <section class="Star-chef">
+            <div class="container"><h1>19 <span>Michelin</span> Stars Chef</h1>
+            </div>
+        </section>
+        <section class="Delicious">
+            <div class="container"><h1>How We Keep Your Meal <span>Delicious</span></h1>
+            </div>
+        </section>
+        <section class="Taste">
+            <div class="container"><h1>Get your the best Taste <span>Now!</span></h1>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
-                Pie de pagina
+                <img src="/images/logo-foodz.png" alt="Logo-Foodz">
         </div>
     </footer>
     <script src="./js/main.js"></script>
