index.html: Re-estructurar el header. main.css: Media Queries para ocultar Menu Principal & Icono menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -9,13 +9,24 @@
 </head>
 <body>
     <header class="header">
-        <div class="container header-container">
-            <div class="site-logo">
-                <img src="./images/logo-foodz.png" alt="Logo Foodz">
+        <div class="container">
+            <nav class="menu-nav nav-navbar">
+                <div class="site-logo">
+                <a href="#">
+                    <img src="./images/logo-foodz.png" alt="Logo Foodz">
+                </a>
             </div>
-            <div class="hamburger-menu">
-                <img src="./images/burger-icon.png" alt="Burger Icon">
-            </div>
+                <ul class="menu-main">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Order now</a></li>
+                </ul>
+                <div class="hamburger-menu">
+                    <img src="./images/burger-icon.png" alt="Burger Icon">
+                </div>
+            </nav>
         </div>
     </header>
     <main class="main">
