--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,20 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
+
+
             <nav class="menu-nav nav-navbar">
                 <div class="site-logo">
-                <a href="#">
-                    <img src="./images/logo-foodz.png" alt="Logo Foodz">
-                </a>
-            </div>
+                    <a href="index.html">
+                        <img src="./images/logo-foodz.png" alt="Logo Foodz">
+                    </a>
+                </div>
                 <ul class="menu-main">
-                    <li class="menu__item"><a href="#" class="menu__link btn">Home</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link btn active">Home</a></li>
                     <li class="menu__item"><a href="#" class="menu__link btn">Menu</a></li>
                     <li class="menu__item"><a href="#" class="menu__link btn">Blog</a></li>
                     <li class="menu__item"><a href="#" class="menu__link btn">Contact</a></li>
@@ -41,23 +45,66 @@
             </div>
         </section>
         <section class="Star-chef">
-            <div class="container"><h1>19 <span>Michelin </span> Stars Chef</h1>
+            <div class="container">
+                <h1>19 <span>Michelin </span> Stars Chef</h1>
             </div>
         </section>
         <section class="Delicious">
-            <div class="container"><h1>How We Keep Your Meal <span>Delicious</span></h1>
+            <div class="container">
+                <h1>How We Keep Your Meal <span>Delicious</span></h1>
             </div>
         </section>
         <section class="Taste">
-            <div class="container"><h1>Get your the best Taste <span>Now!</span></h1>
+            <div class="container">
+                <h1>Get your the best Taste <span>Now!</span></h1>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-                <img src="/images/logo-foodz.png" alt="Logo-Foodz">
+        <div class="container footer-container">
+            <div class="widget widget-left">
+                <div class="site-logo footer-logo">
+                    <a href="index.html">
+                        <img src="/images/logo-foodz.png" alt="Logo-Foodz">
+                    </a>
+                </div>
+                <p>Explore your Taste with speacial food in the special place, that will make you happy. I try to write
+                    some thing without lorem isum.</p>
+            </div>
+
+            <div class="widget widget-right">
+                <div class="menu-footer">
+                    <details class="details details-support ">
+                        <summary>Support</summary>
+                        <ul class="submenu menu-support">
+                            <li class="menu__item"><a href="#" class="menu__link">Help Center</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Safety information</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Cancellation options</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Report Complaint</a></li>
+                        </ul>
+                    </details>
+                    <details class="details details-community">
+                        <summary>Community</summary>
+                        <ul class="submenu menu-community">
+                            <li class="menu__item"><a href="#" class="menu__link">Customer Review</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Newsletter</a></li>
+                        </ul>
+                    </details>
+                    <details class="details details-about">
+                        <summary>Abuot</summary>
+                        <ul class="submenu menu-about">
+                            <li class="menu__item"><a href="#" class="menu__link">Our Chef</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Carrers</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Blog</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+                        </ul>
+                    </details>
+                </div>
+            </div>
+
         </div>
     </footer>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
