index.html Section Question

--- a/index.html
+++ b/index.html
@@ -35,28 +35,38 @@
     </header>
     <main class="main">
         <section class="questions">
-            <div class="container">
-                <h1>You've Got Questions. We've Got Taste.</h1>
+            <div class="container questions-container">
+                <div class="questions-content">
+                    <div class="question-1">
+                        <h1 class="hero">You've Got Questions. We've Got Taste.</h1>
+                        <p>Explore your Taste with speacial food in the special place. This text don’t have any meaning
+                        </p>
+                        <a href="#" class="btn btn--light-green">Order now</a>
+                    </div>
+                    <div class="class question-2 container-image">
+                        <img class="img img-ramen" src="/images/ramen-completo.png" alt="Background-Ramen">
+                    </div>
+                </div>
             </div>
         </section>
         <section class="offers">
             <div class="container">
-                <h1>Today <span>special</span> offers</h1>
+                <h2>Today <span>special</span> offers</h2>
             </div>
         </section>
         <section class="Star-chef">
             <div class="container">
-                <h1>19 <span>Michelin </span> Stars Chef</h1>
+                <h2>19 <span>Michelin </span> Stars Chef</h2>
             </div>
         </section>
         <section class="Delicious">
             <div class="container">
-                <h1>How We Keep Your Meal <span>Delicious</span></h1>
+                <h2>How We Keep Your Meal <span>Delicious</span></h2>
             </div>
         </section>
         <section class="Taste">
             <div class="container">
-                <h1>Get your the best Taste <span>Now!</span></h1>
+                <h2>Get your the best Taste <span>Now!</span></h2>
             </div>
         </section>
     </main>
