main:css : Se hacen los cambios en los media querties para que se vea de una mejor manera

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 <body>
     <header class="header">
         <div class="container">
-
-
             <nav class="menu-nav nav-navbar">
                 <div class="site-logo">
                     <a href="index.html">
@@ -41,10 +39,18 @@
                         <h1 class="hero">You've Got Questions. We've Got Taste.</h1>
                         <p>Explore your Taste with speacial food in the special place. This text don’t have any meaning
                         </p>
-                        <a href="#" class="btn btn--light-green">Order now</a>
+                        <div class="box-buttons">
+                            <a href="#" class="btn btn--light-green btn-non-block">Order now</a>
+                            <a href="#" class="btn btn-explore btn-non-block">Explore menu</a>
+                        </div>
                     </div>
                     <div class="class question-2 container-image">
-                        <img class="img img-ramen" src="/images/ramen-completo.png" alt="Background-Ramen">
+                        <!-- <img class="img img-ramen" src="/images/ramen-completo.png" alt="Background-Ramen"> -->
+                        <picture>
+                            <source media="(width < 768px)" srcset="./images/ramen-portrait.png" />
+                            <source media="(width >= 768px)" srcset="./images/ramen-tablet.png" />
+                            <img class="img img-ramen" src="./images/ramen-tablet.png" alt="Chris standing up holding his daughter Elva" />
+                        </picture>
                     </div>
                 </div>
             </div>
