index.html : Se estructura la 3ra sección de la página web.   main.css : Se ponen los atributos para los media querties

--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
                     </div>
                     <div class="class question-2 container-image">
                         <!-- <img class="img img-ramen" src="/images/ramen-completo.png" alt="Background-Ramen"> -->
+
+                        <!-- TODO_: falta agregar la imagen del Dektop -->
                         <picture>
                             <source media="(width < 768px)" srcset="./images/ramen-portrait.png" />
                             <source media="(width >= 768px)" srcset="./images/ramen-tablet.png" />
-                            <img class="img img-ramen" src="./images/ramen-tablet.png" alt="Chris standing up holding his daughter Elva" />
+                            <img class="img img-ramen" src="./images/ramen-tablet.png"
+                                alt="Chris standing up holding his daughter Elva" />
                         </picture>
                     </div>
                 </div>
@@ -61,8 +64,33 @@
             </div>
         </section>
         <section class="Star-chef">
-            <div class="container">
-                <h2>19 <span>Michelin </span> Stars Chef</h2>
+            <div class="container michelin">
+                <h2 class="chef-michelin">19 <span>Michelin </span> Stars Chef</h2>
+                <div class="chefs-content">
+                    <div class="chef-1">
+                            <img class="image.chef" src="/images/Chef.png" alt="Chef">
+                    </div>
+                    <div class="chef-2">
+                        <h3 class="chef-encabezado">
+                            Alain Ducasse – 19 Michelin Stars
+                        </h3>
+                        <p>Considered by many to be one of the best chefs in the world, he’s built a business empire
+                            over the years with 36 restaurants spanning across the globe. He’s also one of only two
+                            chefs to hold 21 Michelin stars throughout his career and the first chef to own restaurants
+                            carrying three Michelin Stars in three cities.</p>
+                        <p> 
+                            In addition to being known for world-class French cuisine, Ducasse is the only chef on this
+                            list who has sent his food into space. In 2015, Ducasse sent meals to astronauts orbiting
+                            Earth aboard the International Space Station, an accomplishment that Ducasse said he viewed
+                            as conquering ‘ the final frontier (of cooking)’.
+                        </p>
+                        
+                        <a href="#" class="link-chef"> View All Restaurant</a>
+                    </div>
+                </div>
+            </div>
+            
+            </div>
             </div>
         </section>
         <section class="Delicious">
