index.html: Se esctructura la sección de special offers & se agregan las imagenes correspondientes

--- a/index.html
+++ b/index.html
@@ -58,38 +58,83 @@
                 </div>
             </div>
         </section>
-        <section class="offers">
-            <div class="container">
-                <h2>Today <span>special</span> offers</h2>
-            </div>
+        <section class="sprecial-offers">
+            <div class="container sepecial-offers">
+                <div class="special-offers-content">
+                    <h2>Today <span>special</span> offers</h2>
+                    <p class="subtitulo">Best cooks and best delivery guys all at your service. Hot tasty food will
+                        reach you in 60 minutes.</p>
+                    <div class="menu-offers">
+                        <div class="offert-1">
+                            <img class="sushi" src="./images/sushi.png" alt="sushi">
+                            <h3>Gimbap</h3>
+                            <div class="review">
+                                <img class="estrellas" src="./images/estrellas.png" alt="5-estrellas">
+                                <p>214 Reviews</p>
+                            </div>
+                            <div class="box-buttons">
+                                <a href="#" class="btn btn--light-green btn-non-block">Order now</a>
+                            </div>
+                        </div>
+                        <div class="offert-2">
+                            <img class="carne-toppings" src="./images/carne-toppings.png" alt="carne-toppings">
+                            <h3>Korea BBQ</h3>
+                            <div class="review">
+                                <img class="estrellas" src="./images/estrellas.png" alt="5-estrellas">
+                                <p>214 Reviews</p>
+                                <p>Excellent flavor for your preference with :
+                                    <u>
+                                        <li>Aromatic</li>
+                                        <li>Spicy</li>
+                                        <li>Honeyed sugary</li>
+                                    </u>
+                                </p>
+                            </div>
+                            <div class="box-buttons">
+                                <a href="#" class="btn btn--light-green btn-non-block">Order now</a>
+                            </div>
+                        </div>
+
+
+                            <div class="offert-3">
+                                <img class="cerdo-agridulce" src="./images/cerdo-agridulce.png" alt="cerdo-agridulce">
+                                <h3>Gimbap</h3>
+                                <img class="estrellas" src="./images/estrellas.png" alt="5-estrellas">
+                                <p>214 Reviews</p>
+                                <div class="box-buttons">
+                                    <a href="#" class="btn btn--light-green btn-non-block">Order now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
         </section>
-        <section class="Star-chef">
+        <section class="star-chef">
             <div class="container michelin">
                 <h2 class="chef-michelin">19 <span>Michelin </span> Stars Chef</h2>
                 <div class="chefs-content">
                     <div class="chef-1">
-                            <img class="image.chef" src="/images/Chef.png" alt="Chef">
+                        <img class="image.chef" src="/images/Chef.png" alt="Chef">
                     </div>
                     <div class="chef-2">
                         <h3 class="chef-encabezado">
-                            Alain Ducasse – 19 Michelin Stars
+                            Alain Ducasse – 19 Michelin Stars <a href="#" class="link-chef"> View All Restaurant</a>
                         </h3>
                         <p>Considered by many to be one of the best chefs in the world, he’s built a business empire
                             over the years with 36 restaurants spanning across the globe. He’s also one of only two
                             chefs to hold 21 Michelin stars throughout his career and the first chef to own restaurants
                             carrying three Michelin Stars in three cities.</p>
-                        <p> 
+                        <p>
                             In addition to being known for world-class French cuisine, Ducasse is the only chef on this
                             list who has sent his food into space. In 2015, Ducasse sent meals to astronauts orbiting
                             Earth aboard the International Space Station, an accomplishment that Ducasse said he viewed
                             as conquering ‘ the final frontier (of cooking)’.
                         </p>
-                        
-                        <a href="#" class="link-chef"> View All Restaurant</a>
+
+                        <a href="#" class="link-chef-mobile"> View All Restaurant</a>
                     </div>
                 </div>
             </div>
-            
+
             </div>
             </div>
         </section>
