index.html: Se agregar las lines¿as de codigo para la sección de OFFERS main.css: se hace el diseño de los media queries

--- a/index.html
+++ b/index.html
@@ -65,48 +65,60 @@
                     <p class="subtitulo">Best cooks and best delivery guys all at your service. Hot tasty food will
                         reach you in 60 minutes.</p>
                     <div class="menu-offers">
-                        <div class="offert-1">
-                            <img class="sushi" src="./images/sushi.png" alt="sushi">
-                            <h3>Gimbap</h3>
-                            <div class="review">
-                                <img class="estrellas" src="./images/estrellas.png" alt="5-estrellas">
-                                <p>214 Reviews</p>
-                            </div>
-                            <div class="box-buttons">
-                                <a href="#" class="btn btn--light-green btn-non-block">Order now</a>
+                        <div class="content-sushi">
+                            <div class="offert-1">
+                                <div class="content-image-1">
+                                    <img class="sushi" src="./images/sushi.png" alt="sushi">
+                                </div>
+                                <h3>Gimbap</h3>
+                                <div class="review">
+                                    <img class="estrellas" src="./images/estrellas.png" alt="5-estrellas">
+                                    <p>214 Reviews</p>
+                                </div>
+                                <div class="box-buttons">
+                                    <a href="#" class="btn btn--light-green btn-non-block">Order now</a>
+                                </div>
                             </div>
                         </div>
                         <div class="offert-2">
-                            <img class="carne-toppings" src="./images/carne-toppings.png" alt="carne-toppings">
-                            <h3>Korea BBQ</h3>
-                            <div class="review">
-                                <img class="estrellas" src="./images/estrellas.png" alt="5-estrellas">
-                                <p>214 Reviews</p>
-                                <p>Excellent flavor for your preference with :
-                                    <u>
-                                        <li>Aromatic</li>
-                                        <li>Spicy</li>
-                                        <li>Honeyed sugary</li>
-                                    </u>
-                                </p>
-                            </div>
-                            <div class="box-buttons">
-                                <a href="#" class="btn btn--light-green btn-non-block">Order now</a>
+                            <div class="content-korea-bbq">
+                                <div class="content-image-2"> 
+                                    <img class="carne-toppings" src="./images/carne-toppings.png" alt="carne-toppings">
+                                </div> 
+                                <h3>Korea BBQ</h3>
+                                <div class="review">
+                                    <img class="estrellas" src="./images/estrellas.png" alt="5-estrellas">
+                                    <p>214 Reviews</p>
+                                    <p>Excellent flavor for your preference with :
+                                        <ul>
+                                            <li>Aromatic</li>
+                                            <li>Spicy</li>
+                                            <li>Honeyed sugary</li>
+                                        </ul>
+                                    </p>
+                                </div>
+                                <div class="box-buttons">
+                                    <a href="#" class="btn btn--light-green btn-non-block">Order now</a>
+                                </div>
                             </div>
                         </div>
-
-
-                            <div class="offert-3">
+                        <div class="offert-3">
+                            <div class="content-cerdo-agridulce">
                                 <img class="cerdo-agridulce" src="./images/cerdo-agridulce.png" alt="cerdo-agridulce">
                                 <h3>Gimbap</h3>
-                                <img class="estrellas" src="./images/estrellas.png" alt="5-estrellas">
-                                <p>214 Reviews</p>
+                                <div class="review">
+                                    <div class="content-image-3">
+                                        <img class="estrellas" src="./images/estrellas.png" alt="5-estrellas">
+                                    </div>
+                                    <p>214 Reviews</p>
+                                </div>
                                 <div class="box-buttons">
                                     <a href="#" class="btn btn--light-green btn-non-block">Order now</a>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
         </section>
         <section class="star-chef">
             <div class="container michelin">
